--- a/my-frontend/package.json
+++ b/my-frontend/package.json
@@ -13,10 +13,13 @@
     "@heroicons/react": "^2.2.0",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.50.5",
+    "chart.js": "^4.5.0",
     "dotenv": "^17.2.0",
     "framer-motion": "^12.23.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
